[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbdie_classes"
authors = [{ name = "trOOnies", email = "example@github.com" }]
description = "DBD Info Extraction Classes Package"
readme = "README.md"
requires-python = ">=3.10.12"
keywords = ["dbd"]
license = { text = "GNU-3" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }
# optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.pytest.ini_options]
minversion = "6.0"

[tool.coverage.run]
omit = [
    "dbdie_classes/base.py",
    # "dbdie_classes/options/*.py",
]

[project.scripts]
my-script = "dbdie_classes.module:function"
